parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    BTAND
    BTNOT
    BTOR
    COMMENT
    DOT
    FUR
    MODULO
    NOT
    QUOTE
    STR
    SWENN
    WRD
    newline

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAMM V R B SCHLUSS
Rule 2     V -> V0 V
Rule 3     V -> <empty>
Rule 4     V0 -> DIM ID V1
Rule 5     V0 -> DIM ID V2
Rule 6     V1 -> COMMA ID V1
Rule 7     V1 -> COMMA ID V2
Rule 8     V2 -> ALS TYPE AMC0
Rule 9     R -> R0 COLON B RUKKHER R
Rule 10    R -> <empty>
Rule 11    R0 -> SUB ID
Rule 12    B -> BEGIN S
Rule 13    S -> S0 S
Rule 14    S -> <empty>
Rule 15    S0 -> IDORAMC ASSIGN E
Rule 16    S0 -> EIN LPAREN IDORAMC INPUT RPAREN
Rule 17    S0 -> AUS LPAREN EXP OUTPUT RPAREN
Rule 18    S0 -> GSUB ID
Rule 19    S0 -> W SD END
Rule 20    S0 -> WAHREND CONDITION S ENDE
Rule 21    S0 -> TUN S WAHREND CONDITION
Rule 22    S0 -> <empty>
Rule 23    E -> T
Rule 24    E -> E PLUS T
Rule 25    E -> E MINUS T
Rule 26    T -> F
Rule 27    T -> T TIMES F
Rule 28    T -> T DIVIDE F
Rule 29    T -> <empty>
Rule 30    F -> ID
Rule 31    F -> VALUE
Rule 32    F -> FLT
Rule 33    F -> LPAREN E RPAREN
Rule 34    F -> <empty>
Rule 35    EXP -> <empty>
Rule 36    IDORAMC -> ID
Rule 37    IDORAMC -> ID AMC1
Rule 38    EIDORAMC -> ID
Rule 39    EIDORAMC -> ID AMC1
Rule 40    CONDITION -> LPAREN CMP GT CMP RPAREN
Rule 41    CONDITION -> LPAREN CMP GE CMP RPAREN
Rule 42    CONDITION -> LPAREN CMP EQ CMP RPAREN
Rule 43    CONDITION -> LPAREN CMP NE CMP RPAREN
Rule 44    CONDITION -> LPAREN CMP LE CMP RPAREN
Rule 45    CONDITION -> LPAREN CMP LT CMP RPAREN
Rule 46    CONDITION -> CONDITION AND CONDITION
Rule 47    CONDITION -> CONDITION OR CONDITION
Rule 48    CMP -> VALUE
Rule 49    CMP -> ID
Rule 50    CMP -> FLT
Rule 51    W -> W0 W1
Rule 52    W0 -> WENN CONDITION
Rule 53    W1 -> DANN S
Rule 54    SD -> SD0 W1
Rule 55    SD -> <empty>
Rule 56    SD0 -> SONNST
Rule 57    END -> ENDE
Rule 58    INPUT -> COMMA IDORAMC INPUT
Rule 59    INPUT -> <empty>
Rule 60    OUTPUT -> COMMA EXP OUTPUT
Rule 61    OUTPUT -> <empty>
Rule 62    TYPE -> WORD
Rule 63    TYPE -> FLOAT
Rule 64    TYPE -> STRING
Rule 65    AMC0 -> AMC1
Rule 66    AMC0 -> <empty>
Rule 67    AMC1 -> LBRKT VALUE RBRKT AMC2
Rule 68    AMC1 -> LBRKT ID RBRKT AMC2
Rule 69    AMC1 -> LBRKT VALUE RBRKT
Rule 70    AMC1 -> LBRKT ID RBRKT
Rule 71    AMC1 -> <empty>
Rule 72    AMC2 -> LBRKT VALUE RBRKT AMC3
Rule 73    AMC2 -> LBRKT ID RBRKT AMC3
Rule 74    AMC2 -> LBRKT VALUE RBRKT
Rule 75    AMC2 -> LBRKT ID RBRKT
Rule 76    AMC2 -> <empty>
Rule 77    AMC3 -> LBRKT VALUE RBRKT
Rule 78    AMC3 -> LBRKT ID RBRKT
Rule 79    AMC3 -> <empty>

Terminals, with rules where they appear

ALS                  : 8
AND                  : 46
ASSIGN               : 15
AUS                  : 17
BEGIN                : 12
BREAK                : 
BTAND                : 
BTNOT                : 
BTOR                 : 
COLON                : 9
COMMA                : 6 7 58 60
COMMENT              : 
DANN                 : 53
DIM                  : 4 5
DIVIDE               : 28
DOT                  : 
EIN                  : 16
ENDE                 : 20 57
EQ                   : 42
FLOAT                : 63
FLT                  : 32 50
FUR                  : 
GE                   : 41
GSUB                 : 18
GT                   : 40
ID                   : 4 5 6 7 11 18 30 36 37 38 39 49 68 70 73 75 78
LBRKT                : 67 68 69 70 72 73 74 75 77 78
LE                   : 44
LPAREN               : 16 17 33 40 41 42 43 44 45
LT                   : 45
MINUS                : 25
MODULO               : 
NE                   : 43
NOT                  : 
OR                   : 47
PLUS                 : 24
PROGRAMM             : 1
QUOTE                : 
RBRKT                : 67 68 69 70 72 73 74 75 77 78
RPAREN               : 16 17 33 40 41 42 43 44 45
RUKKHER              : 9
SCHLUSS              : 1
SONNST               : 56
STR                  : 
STRING               : 64
SUB                  : 11
SWENN                : 
TIMES                : 27
TUN                  : 21
VALUE                : 31 48 67 69 72 74 77
WAHREND              : 20 21
WENN                 : 52
WORD                 : 62
WRD                  : 
error                : 
newline              : 

Nonterminals, with rules where they appear

AMC0                 : 8
AMC1                 : 37 39 65
AMC2                 : 67 68
AMC3                 : 72 73
B                    : 1 9
CMP                  : 40 40 41 41 42 42 43 43 44 44 45 45
CONDITION            : 20 21 46 46 47 47 52
E                    : 15 24 25 33
EIDORAMC             : 
END                  : 19
EXP                  : 17 60
F                    : 26 27 28
IDORAMC              : 15 16 58
INPUT                : 16 58
OUTPUT               : 17 60
R                    : 1 9
R0                   : 9
S                    : 12 13 20 21 53
S0                   : 13
SD                   : 19
SD0                  : 54
T                    : 23 24 25 27 28
TYPE                 : 8
V                    : 1 2
V0                   : 2
V1                   : 4 6
V2                   : 5 7
W                    : 19
W0                   : 51
W1                   : 51 54
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAMM V R B SCHLUSS

    PROGRAMM        shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAMM . V R B SCHLUSS
    (2) V -> . V0 V
    (3) V -> .
    (4) V0 -> . DIM ID V1
    (5) V0 -> . DIM ID V2

    SUB             reduce using rule 3 (V -> .)
    BEGIN           reduce using rule 3 (V -> .)
    DIM             shift and go to state 5

    V                              shift and go to state 3
    V0                             shift and go to state 4

state 3

    (1) program -> PROGRAMM V . R B SCHLUSS
    (9) R -> . R0 COLON B RUKKHER R
    (10) R -> .
    (11) R0 -> . SUB ID

    BEGIN           reduce using rule 10 (R -> .)
    SUB             shift and go to state 8

    R                              shift and go to state 6
    R0                             shift and go to state 7

state 4

    (2) V -> V0 . V
    (2) V -> . V0 V
    (3) V -> .
    (4) V0 -> . DIM ID V1
    (5) V0 -> . DIM ID V2

    SUB             reduce using rule 3 (V -> .)
    BEGIN           reduce using rule 3 (V -> .)
    DIM             shift and go to state 5

    V0                             shift and go to state 4
    V                              shift and go to state 9

state 5

    (4) V0 -> DIM . ID V1
    (5) V0 -> DIM . ID V2

    ID              shift and go to state 10


state 6

    (1) program -> PROGRAMM V R . B SCHLUSS
    (12) B -> . BEGIN S

    BEGIN           shift and go to state 12

    B                              shift and go to state 11

state 7

    (9) R -> R0 . COLON B RUKKHER R

    COLON           shift and go to state 13


state 8

    (11) R0 -> SUB . ID

    ID              shift and go to state 14


state 9

    (2) V -> V0 V .

    SUB             reduce using rule 2 (V -> V0 V .)
    BEGIN           reduce using rule 2 (V -> V0 V .)


state 10

    (4) V0 -> DIM ID . V1
    (5) V0 -> DIM ID . V2
    (6) V1 -> . COMMA ID V1
    (7) V1 -> . COMMA ID V2
    (8) V2 -> . ALS TYPE AMC0

    COMMA           shift and go to state 17
    ALS             shift and go to state 18

    V1                             shift and go to state 15
    V2                             shift and go to state 16

state 11

    (1) program -> PROGRAMM V R B . SCHLUSS

    SCHLUSS         shift and go to state 19


state 12

    (12) B -> BEGIN . S
    (13) S -> . S0 S
    (14) S -> .
    (15) S0 -> . IDORAMC ASSIGN E
    (16) S0 -> . EIN LPAREN IDORAMC INPUT RPAREN
    (17) S0 -> . AUS LPAREN EXP OUTPUT RPAREN
    (18) S0 -> . GSUB ID
    (19) S0 -> . W SD END
    (20) S0 -> . WAHREND CONDITION S ENDE
    (21) S0 -> . TUN S WAHREND CONDITION
    (22) S0 -> .
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1
    (51) W -> . W0 W1
    (52) W0 -> . WENN CONDITION

  ! shift/reduce conflict for EIN resolved as shift
  ! shift/reduce conflict for AUS resolved as shift
  ! shift/reduce conflict for GSUB resolved as shift
  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for TUN resolved as shift
  ! reduce/reduce conflict for SCHLUSS resolved using rule 14 (S -> .)
  ! reduce/reduce conflict for RUKKHER resolved using rule 14 (S -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WENN resolved as shift
    SCHLUSS         reduce using rule 14 (S -> .)
    RUKKHER         reduce using rule 14 (S -> .)
    EIN             shift and go to state 23
    AUS             shift and go to state 24
    GSUB            shift and go to state 25
    WAHREND         shift and go to state 28
    TUN             shift and go to state 29
    ID              shift and go to state 26
    WENN            shift and go to state 31

  ! EIN             [ reduce using rule 22 (S0 -> .) ]
  ! AUS             [ reduce using rule 22 (S0 -> .) ]
  ! GSUB            [ reduce using rule 22 (S0 -> .) ]
  ! WAHREND         [ reduce using rule 22 (S0 -> .) ]
  ! TUN             [ reduce using rule 22 (S0 -> .) ]
  ! ID              [ reduce using rule 22 (S0 -> .) ]
  ! WENN            [ reduce using rule 22 (S0 -> .) ]
  ! SCHLUSS         [ reduce using rule 22 (S0 -> .) ]
  ! RUKKHER         [ reduce using rule 22 (S0 -> .) ]

    S                              shift and go to state 20
    S0                             shift and go to state 21
    IDORAMC                        shift and go to state 22
    W                              shift and go to state 27
    W0                             shift and go to state 30

state 13

    (9) R -> R0 COLON . B RUKKHER R
    (12) B -> . BEGIN S

    BEGIN           shift and go to state 12

    B                              shift and go to state 32

state 14

    (11) R0 -> SUB ID .

    COLON           reduce using rule 11 (R0 -> SUB ID .)


state 15

    (4) V0 -> DIM ID V1 .

    DIM             reduce using rule 4 (V0 -> DIM ID V1 .)
    SUB             reduce using rule 4 (V0 -> DIM ID V1 .)
    BEGIN           reduce using rule 4 (V0 -> DIM ID V1 .)


state 16

    (5) V0 -> DIM ID V2 .

    DIM             reduce using rule 5 (V0 -> DIM ID V2 .)
    SUB             reduce using rule 5 (V0 -> DIM ID V2 .)
    BEGIN           reduce using rule 5 (V0 -> DIM ID V2 .)


state 17

    (6) V1 -> COMMA . ID V1
    (7) V1 -> COMMA . ID V2

    ID              shift and go to state 33


state 18

    (8) V2 -> ALS . TYPE AMC0
    (62) TYPE -> . WORD
    (63) TYPE -> . FLOAT
    (64) TYPE -> . STRING

    WORD            shift and go to state 35
    FLOAT           shift and go to state 36
    STRING          shift and go to state 37

    TYPE                           shift and go to state 34

state 19

    (1) program -> PROGRAMM V R B SCHLUSS .

    $end            reduce using rule 1 (program -> PROGRAMM V R B SCHLUSS .)


state 20

    (12) B -> BEGIN S .

    SCHLUSS         reduce using rule 12 (B -> BEGIN S .)
    RUKKHER         reduce using rule 12 (B -> BEGIN S .)


state 21

    (13) S -> S0 . S
    (13) S -> . S0 S
    (14) S -> .
    (15) S0 -> . IDORAMC ASSIGN E
    (16) S0 -> . EIN LPAREN IDORAMC INPUT RPAREN
    (17) S0 -> . AUS LPAREN EXP OUTPUT RPAREN
    (18) S0 -> . GSUB ID
    (19) S0 -> . W SD END
    (20) S0 -> . WAHREND CONDITION S ENDE
    (21) S0 -> . TUN S WAHREND CONDITION
    (22) S0 -> .
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1
    (51) W -> . W0 W1
    (52) W0 -> . WENN CONDITION

  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for EIN resolved as shift
  ! shift/reduce conflict for AUS resolved as shift
  ! shift/reduce conflict for GSUB resolved as shift
  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for TUN resolved as shift
  ! reduce/reduce conflict for SCHLUSS resolved using rule 14 (S -> .)
  ! reduce/reduce conflict for RUKKHER resolved using rule 14 (S -> .)
  ! reduce/reduce conflict for ENDE resolved using rule 14 (S -> .)
  ! reduce/reduce conflict for SONNST resolved using rule 14 (S -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WENN resolved as shift
    SCHLUSS         reduce using rule 14 (S -> .)
    RUKKHER         reduce using rule 14 (S -> .)
    ENDE            reduce using rule 14 (S -> .)
    SONNST          reduce using rule 14 (S -> .)
    EIN             shift and go to state 23
    AUS             shift and go to state 24
    GSUB            shift and go to state 25
    WAHREND         shift and go to state 28
    TUN             shift and go to state 29
    ID              shift and go to state 26
    WENN            shift and go to state 31

  ! WAHREND         [ reduce using rule 14 (S -> .) ]
  ! EIN             [ reduce using rule 22 (S0 -> .) ]
  ! AUS             [ reduce using rule 22 (S0 -> .) ]
  ! GSUB            [ reduce using rule 22 (S0 -> .) ]
  ! WAHREND         [ reduce using rule 22 (S0 -> .) ]
  ! TUN             [ reduce using rule 22 (S0 -> .) ]
  ! ID              [ reduce using rule 22 (S0 -> .) ]
  ! WENN            [ reduce using rule 22 (S0 -> .) ]
  ! SCHLUSS         [ reduce using rule 22 (S0 -> .) ]
  ! RUKKHER         [ reduce using rule 22 (S0 -> .) ]
  ! ENDE            [ reduce using rule 22 (S0 -> .) ]
  ! SONNST          [ reduce using rule 22 (S0 -> .) ]

    S0                             shift and go to state 21
    S                              shift and go to state 38
    IDORAMC                        shift and go to state 22
    W                              shift and go to state 27
    W0                             shift and go to state 30

state 22

    (15) S0 -> IDORAMC . ASSIGN E

    ASSIGN          shift and go to state 39


state 23

    (16) S0 -> EIN . LPAREN IDORAMC INPUT RPAREN

    LPAREN          shift and go to state 40


state 24

    (17) S0 -> AUS . LPAREN EXP OUTPUT RPAREN

    LPAREN          shift and go to state 41


state 25

    (18) S0 -> GSUB . ID

    ID              shift and go to state 42


state 26

    (36) IDORAMC -> ID .
    (37) IDORAMC -> ID . AMC1
    (67) AMC1 -> . LBRKT VALUE RBRKT AMC2
    (68) AMC1 -> . LBRKT ID RBRKT AMC2
    (69) AMC1 -> . LBRKT VALUE RBRKT
    (70) AMC1 -> . LBRKT ID RBRKT
    (71) AMC1 -> .

  ! reduce/reduce conflict for ASSIGN resolved using rule 36 (IDORAMC -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 36 (IDORAMC -> ID .)
  ! reduce/reduce conflict for RPAREN resolved using rule 36 (IDORAMC -> ID .)
    ASSIGN          reduce using rule 36 (IDORAMC -> ID .)
    COMMA           reduce using rule 36 (IDORAMC -> ID .)
    RPAREN          reduce using rule 36 (IDORAMC -> ID .)
    LBRKT           shift and go to state 44

  ! ASSIGN          [ reduce using rule 71 (AMC1 -> .) ]
  ! COMMA           [ reduce using rule 71 (AMC1 -> .) ]
  ! RPAREN          [ reduce using rule 71 (AMC1 -> .) ]

    AMC1                           shift and go to state 43

state 27

    (19) S0 -> W . SD END
    (54) SD -> . SD0 W1
    (55) SD -> .
    (56) SD0 -> . SONNST

    ENDE            reduce using rule 55 (SD -> .)
    SONNST          shift and go to state 47

    SD                             shift and go to state 45
    SD0                            shift and go to state 46

state 28

    (20) S0 -> WAHREND . CONDITION S ENDE
    (40) CONDITION -> . LPAREN CMP GT CMP RPAREN
    (41) CONDITION -> . LPAREN CMP GE CMP RPAREN
    (42) CONDITION -> . LPAREN CMP EQ CMP RPAREN
    (43) CONDITION -> . LPAREN CMP NE CMP RPAREN
    (44) CONDITION -> . LPAREN CMP LE CMP RPAREN
    (45) CONDITION -> . LPAREN CMP LT CMP RPAREN
    (46) CONDITION -> . CONDITION AND CONDITION
    (47) CONDITION -> . CONDITION OR CONDITION

    LPAREN          shift and go to state 49

    CONDITION                      shift and go to state 48

state 29

    (21) S0 -> TUN . S WAHREND CONDITION
    (13) S -> . S0 S
    (14) S -> .
    (15) S0 -> . IDORAMC ASSIGN E
    (16) S0 -> . EIN LPAREN IDORAMC INPUT RPAREN
    (17) S0 -> . AUS LPAREN EXP OUTPUT RPAREN
    (18) S0 -> . GSUB ID
    (19) S0 -> . W SD END
    (20) S0 -> . WAHREND CONDITION S ENDE
    (21) S0 -> . TUN S WAHREND CONDITION
    (22) S0 -> .
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1
    (51) W -> . W0 W1
    (52) W0 -> . WENN CONDITION

  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for EIN resolved as shift
  ! shift/reduce conflict for AUS resolved as shift
  ! shift/reduce conflict for GSUB resolved as shift
  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for TUN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WENN resolved as shift
    EIN             shift and go to state 23
    AUS             shift and go to state 24
    GSUB            shift and go to state 25
    WAHREND         shift and go to state 28
    TUN             shift and go to state 29
    ID              shift and go to state 26
    WENN            shift and go to state 31

  ! WAHREND         [ reduce using rule 14 (S -> .) ]
  ! EIN             [ reduce using rule 22 (S0 -> .) ]
  ! AUS             [ reduce using rule 22 (S0 -> .) ]
  ! GSUB            [ reduce using rule 22 (S0 -> .) ]
  ! WAHREND         [ reduce using rule 22 (S0 -> .) ]
  ! TUN             [ reduce using rule 22 (S0 -> .) ]
  ! ID              [ reduce using rule 22 (S0 -> .) ]
  ! WENN            [ reduce using rule 22 (S0 -> .) ]

    S                              shift and go to state 50
    S0                             shift and go to state 21
    IDORAMC                        shift and go to state 22
    W                              shift and go to state 27
    W0                             shift and go to state 30

state 30

    (51) W -> W0 . W1
    (53) W1 -> . DANN S

    DANN            shift and go to state 52

    W1                             shift and go to state 51

state 31

    (52) W0 -> WENN . CONDITION
    (40) CONDITION -> . LPAREN CMP GT CMP RPAREN
    (41) CONDITION -> . LPAREN CMP GE CMP RPAREN
    (42) CONDITION -> . LPAREN CMP EQ CMP RPAREN
    (43) CONDITION -> . LPAREN CMP NE CMP RPAREN
    (44) CONDITION -> . LPAREN CMP LE CMP RPAREN
    (45) CONDITION -> . LPAREN CMP LT CMP RPAREN
    (46) CONDITION -> . CONDITION AND CONDITION
    (47) CONDITION -> . CONDITION OR CONDITION

    LPAREN          shift and go to state 49

    CONDITION                      shift and go to state 53

state 32

    (9) R -> R0 COLON B . RUKKHER R

    RUKKHER         shift and go to state 54


state 33

    (6) V1 -> COMMA ID . V1
    (7) V1 -> COMMA ID . V2
    (6) V1 -> . COMMA ID V1
    (7) V1 -> . COMMA ID V2
    (8) V2 -> . ALS TYPE AMC0

    COMMA           shift and go to state 17
    ALS             shift and go to state 18

    V1                             shift and go to state 55
    V2                             shift and go to state 56

state 34

    (8) V2 -> ALS TYPE . AMC0
    (65) AMC0 -> . AMC1
    (66) AMC0 -> .
    (67) AMC1 -> . LBRKT VALUE RBRKT AMC2
    (68) AMC1 -> . LBRKT ID RBRKT AMC2
    (69) AMC1 -> . LBRKT VALUE RBRKT
    (70) AMC1 -> . LBRKT ID RBRKT
    (71) AMC1 -> .

  ! reduce/reduce conflict for DIM resolved using rule 66 (AMC0 -> .)
  ! reduce/reduce conflict for SUB resolved using rule 66 (AMC0 -> .)
  ! reduce/reduce conflict for BEGIN resolved using rule 66 (AMC0 -> .)
    DIM             reduce using rule 66 (AMC0 -> .)
    SUB             reduce using rule 66 (AMC0 -> .)
    BEGIN           reduce using rule 66 (AMC0 -> .)
    LBRKT           shift and go to state 44

  ! DIM             [ reduce using rule 71 (AMC1 -> .) ]
  ! SUB             [ reduce using rule 71 (AMC1 -> .) ]
  ! BEGIN           [ reduce using rule 71 (AMC1 -> .) ]

    AMC0                           shift and go to state 57
    AMC1                           shift and go to state 58

state 35

    (62) TYPE -> WORD .

    LBRKT           reduce using rule 62 (TYPE -> WORD .)
    DIM             reduce using rule 62 (TYPE -> WORD .)
    SUB             reduce using rule 62 (TYPE -> WORD .)
    BEGIN           reduce using rule 62 (TYPE -> WORD .)


state 36

    (63) TYPE -> FLOAT .

    LBRKT           reduce using rule 63 (TYPE -> FLOAT .)
    DIM             reduce using rule 63 (TYPE -> FLOAT .)
    SUB             reduce using rule 63 (TYPE -> FLOAT .)
    BEGIN           reduce using rule 63 (TYPE -> FLOAT .)


state 37

    (64) TYPE -> STRING .

    LBRKT           reduce using rule 64 (TYPE -> STRING .)
    DIM             reduce using rule 64 (TYPE -> STRING .)
    SUB             reduce using rule 64 (TYPE -> STRING .)
    BEGIN           reduce using rule 64 (TYPE -> STRING .)


state 38

    (13) S -> S0 S .

    SCHLUSS         reduce using rule 13 (S -> S0 S .)
    RUKKHER         reduce using rule 13 (S -> S0 S .)
    WAHREND         reduce using rule 13 (S -> S0 S .)
    ENDE            reduce using rule 13 (S -> S0 S .)
    SONNST          reduce using rule 13 (S -> S0 S .)


state 39

    (15) S0 -> IDORAMC ASSIGN . E
    (23) E -> . T
    (24) E -> . E PLUS T
    (25) E -> . E MINUS T
    (26) T -> . F
    (27) T -> . T TIMES F
    (28) T -> . T DIVIDE F
    (29) T -> .
    (30) F -> . ID
    (31) F -> . VALUE
    (32) F -> . FLT
    (33) F -> . LPAREN E RPAREN
    (34) F -> .

  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for TIMES resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for PLUS resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for MINUS resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for EIN resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for AUS resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for GSUB resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for WAHREND resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for TUN resolved using rule 29 (T -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! reduce/reduce conflict for WENN resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for SCHLUSS resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for RUKKHER resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for ENDE resolved using rule 29 (T -> .)
  ! reduce/reduce conflict for SONNST resolved using rule 29 (T -> .)
    TIMES           reduce using rule 29 (T -> .)
    DIVIDE          reduce using rule 29 (T -> .)
    PLUS            reduce using rule 29 (T -> .)
    MINUS           reduce using rule 29 (T -> .)
    EIN             reduce using rule 29 (T -> .)
    AUS             reduce using rule 29 (T -> .)
    GSUB            reduce using rule 29 (T -> .)
    WAHREND         reduce using rule 29 (T -> .)
    TUN             reduce using rule 29 (T -> .)
    WENN            reduce using rule 29 (T -> .)
    SCHLUSS         reduce using rule 29 (T -> .)
    RUKKHER         reduce using rule 29 (T -> .)
    ENDE            reduce using rule 29 (T -> .)
    SONNST          reduce using rule 29 (T -> .)
    ID              shift and go to state 62
    VALUE           shift and go to state 63
    FLT             shift and go to state 64
    LPAREN          shift and go to state 65

  ! ID              [ reduce using rule 29 (T -> .) ]
  ! TIMES           [ reduce using rule 34 (F -> .) ]
  ! DIVIDE          [ reduce using rule 34 (F -> .) ]
  ! PLUS            [ reduce using rule 34 (F -> .) ]
  ! MINUS           [ reduce using rule 34 (F -> .) ]
  ! EIN             [ reduce using rule 34 (F -> .) ]
  ! AUS             [ reduce using rule 34 (F -> .) ]
  ! GSUB            [ reduce using rule 34 (F -> .) ]
  ! WAHREND         [ reduce using rule 34 (F -> .) ]
  ! TUN             [ reduce using rule 34 (F -> .) ]
  ! ID              [ reduce using rule 34 (F -> .) ]
  ! WENN            [ reduce using rule 34 (F -> .) ]
  ! SCHLUSS         [ reduce using rule 34 (F -> .) ]
  ! RUKKHER         [ reduce using rule 34 (F -> .) ]
  ! ENDE            [ reduce using rule 34 (F -> .) ]
  ! SONNST          [ reduce using rule 34 (F -> .) ]

    E                              shift and go to state 59
    T                              shift and go to state 60
    F                              shift and go to state 61

state 40

    (16) S0 -> EIN LPAREN . IDORAMC INPUT RPAREN
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1

    ID              shift and go to state 26

    IDORAMC                        shift and go to state 66

state 41

    (17) S0 -> AUS LPAREN . EXP OUTPUT RPAREN
    (35) EXP -> .

    COMMA           reduce using rule 35 (EXP -> .)
    RPAREN          reduce using rule 35 (EXP -> .)

    EXP                            shift and go to state 67

state 42

    (18) S0 -> GSUB ID .

    EIN             reduce using rule 18 (S0 -> GSUB ID .)
    AUS             reduce using rule 18 (S0 -> GSUB ID .)
    GSUB            reduce using rule 18 (S0 -> GSUB ID .)
    WAHREND         reduce using rule 18 (S0 -> GSUB ID .)
    TUN             reduce using rule 18 (S0 -> GSUB ID .)
    ID              reduce using rule 18 (S0 -> GSUB ID .)
    WENN            reduce using rule 18 (S0 -> GSUB ID .)
    SCHLUSS         reduce using rule 18 (S0 -> GSUB ID .)
    RUKKHER         reduce using rule 18 (S0 -> GSUB ID .)
    ENDE            reduce using rule 18 (S0 -> GSUB ID .)
    SONNST          reduce using rule 18 (S0 -> GSUB ID .)


state 43

    (37) IDORAMC -> ID AMC1 .

    ASSIGN          reduce using rule 37 (IDORAMC -> ID AMC1 .)
    COMMA           reduce using rule 37 (IDORAMC -> ID AMC1 .)
    RPAREN          reduce using rule 37 (IDORAMC -> ID AMC1 .)


state 44

    (67) AMC1 -> LBRKT . VALUE RBRKT AMC2
    (68) AMC1 -> LBRKT . ID RBRKT AMC2
    (69) AMC1 -> LBRKT . VALUE RBRKT
    (70) AMC1 -> LBRKT . ID RBRKT

    VALUE           shift and go to state 68
    ID              shift and go to state 69


state 45

    (19) S0 -> W SD . END
    (57) END -> . ENDE

    ENDE            shift and go to state 71

    END                            shift and go to state 70

state 46

    (54) SD -> SD0 . W1
    (53) W1 -> . DANN S

    DANN            shift and go to state 52

    W1                             shift and go to state 72

state 47

    (56) SD0 -> SONNST .

    DANN            reduce using rule 56 (SD0 -> SONNST .)


state 48

    (20) S0 -> WAHREND CONDITION . S ENDE
    (46) CONDITION -> CONDITION . AND CONDITION
    (47) CONDITION -> CONDITION . OR CONDITION
    (13) S -> . S0 S
    (14) S -> .
    (15) S0 -> . IDORAMC ASSIGN E
    (16) S0 -> . EIN LPAREN IDORAMC INPUT RPAREN
    (17) S0 -> . AUS LPAREN EXP OUTPUT RPAREN
    (18) S0 -> . GSUB ID
    (19) S0 -> . W SD END
    (20) S0 -> . WAHREND CONDITION S ENDE
    (21) S0 -> . TUN S WAHREND CONDITION
    (22) S0 -> .
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1
    (51) W -> . W0 W1
    (52) W0 -> . WENN CONDITION

  ! shift/reduce conflict for EIN resolved as shift
  ! shift/reduce conflict for AUS resolved as shift
  ! shift/reduce conflict for GSUB resolved as shift
  ! shift/reduce conflict for WAHREND resolved as shift
  ! shift/reduce conflict for TUN resolved as shift
  ! reduce/reduce conflict for ENDE resolved using rule 14 (S -> .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for WENN resolved as shift
    AND             shift and go to state 74
    OR              shift and go to state 75
    ENDE            reduce using rule 14 (S -> .)
    EIN             shift and go to state 23
    AUS             shift and go to state 24
    GSUB            shift and go to state 25
    WAHREND         shift and go to state 28
    TUN             shift and go to state 29
    ID              shift and go to state 26
    WENN            shift and go to state 31

  ! EIN             [ reduce using rule 22 (S0 -> .) ]
  ! AUS             [ reduce using rule 22 (S0 -> .) ]
  ! GSUB            [ reduce using rule 22 (S0 -> .) ]
  ! WAHREND         [ reduce using rule 22 (S0 -> .) ]
  ! TUN             [ reduce using rule 22 (S0 -> .) ]
  ! ID              [ reduce using rule 22 (S0 -> .) ]
  ! WENN            [ reduce using rule 22 (S0 -> .) ]
  ! ENDE            [ reduce using rule 22 (S0 -> .) ]

    S                              shift and go to state 73
    S0                             shift and go to state 21
    IDORAMC                        shift and go to state 22
    W                              shift and go to state 27
    W0                             shift and go to state 30

state 49

    (40) CONDITION -> LPAREN . CMP GT CMP RPAREN
    (41) CONDITION -> LPAREN . CMP GE CMP RPAREN
    (42) CONDITION -> LPAREN . CMP EQ CMP RPAREN
    (43) CONDITION -> LPAREN . CMP NE CMP RPAREN
    (44) CONDITION -> LPAREN . CMP LE CMP RPAREN
    (45) CONDITION -> LPAREN . CMP LT CMP RPAREN
    (48) CMP -> . VALUE
    (49) CMP -> . ID
    (50) CMP -> . FLT

    VALUE           shift and go to state 77
    ID              shift and go to state 78
    FLT             shift and go to state 79

    CMP                            shift and go to state 76

state 50

    (21) S0 -> TUN S . WAHREND CONDITION

    WAHREND         shift and go to state 80


state 51

    (51) W -> W0 W1 .

    SONNST          reduce using rule 51 (W -> W0 W1 .)
    ENDE            reduce using rule 51 (W -> W0 W1 .)


state 52

    (53) W1 -> DANN . S
    (13) S -> . S0 S
    (14) S -> .
    (15) S0 -> . IDORAMC ASSIGN E
    (16) S0 -> . EIN LPAREN IDORAMC INPUT RPAREN
    (17) S0 -> . AUS LPAREN EXP OUTPUT RPAREN
    (18) S0 -> . GSUB ID
    (19) S0 -> . W SD END
    (20) S0 -> . WAHREND CONDITION S ENDE
    (21) S0 -> . TUN S WAHREND CONDITION
    (22) S0 -> .
    (36) IDORAMC -> . ID
    (37) IDORAMC -> . ID AMC1
    (51) W -> . W0 W1
    (52) W0 -> . WENN CONDITION
